[gd_scene load_steps=2 format=3 uid="uid://dvumtag4nh0ow"]

[ext_resource type="Script" path="res://components/componentScripts/saving.gd" id="1_lkki6"]

[node name="Saving" type="Label"]
offset_right = 100.0
offset_bottom = 33.0
mouse_filter = 0
theme_type_variation = &"LabelTitle"
text = "Saving"
script = ExtResource("1_lkki6")

[node name="SavePanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 29.0
offset_right = 336.0
offset_bottom = 117.0
theme_type_variation = &"OptionPanel"

[node name="M" type="MarginContainer" parent="SavePanel"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="V" type="VBoxContainer" parent="SavePanel/M"]
layout_mode = 2

[node name="SaveManually" type="Button" parent="SavePanel/M/V"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Manually Save  "

[node name="HSeparator2" type="HSeparator" parent="SavePanel/M/V"]
layout_mode = 2
mouse_filter = 1

[node name="ListTitle" type="Label" parent="SavePanel/M/V"]
layout_mode = 2
text = "Export/Import Current List"

[node name="ListEdit" type="TextEdit" parent="SavePanel/M/V"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1

[node name="HList" type="HFlowContainer" parent="SavePanel/M/V"]
layout_mode = 2

[node name="Export" type="Button" parent="SavePanel/M/V/HList"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Export  "

[node name="Import" type="Button" parent="SavePanel/M/V/HList"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Import  "

[node name="HSeparator" type="HSeparator" parent="SavePanel/M/V"]
layout_mode = 2
mouse_filter = 1

[node name="SaveTitle" type="Label" parent="SavePanel/M/V"]
layout_mode = 2
text = "Export/Import Current Save"

[node name="SaveEdit" type="TextEdit" parent="SavePanel/M/V"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
mouse_filter = 1
wrap_mode = 1

[node name="HSave" type="HFlowContainer" parent="SavePanel/M/V"]
layout_mode = 2

[node name="Export" type="Button" parent="SavePanel/M/V/HSave"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Export  "

[node name="Import" type="Button" parent="SavePanel/M/V/HSave"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Import  "

[node name="Warning" type="Label" parent="SavePanel/M/V"]
layout_mode = 2

[node name="HExport" type="HFlowContainer" parent="SavePanel/M/V"]
layout_mode = 2

[node name="Export" type="Button" parent="SavePanel/M/V/HExport"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Export  "

[node name="Import" type="Button" parent="SavePanel/M/V/HExport"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 1
text = "  Import  "

[node name="SaveDialogue" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Save"
access = 1
use_native_dialog = true

[node name="LoadDialogue" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="SavePanel" to="." method="_on_save_panel_mouse_entered"]
[connection signal="mouse_exited" from="SavePanel" to="." method="_on_save_panel_mouse_exited"]
[connection signal="pressed" from="SavePanel/M/V/SaveManually" to="." method="_on_save_manually_pressed"]
[connection signal="pressed" from="SavePanel/M/V/HList/Export" to="." method="_on_list_export_pressed"]
[connection signal="pressed" from="SavePanel/M/V/HSave/Export" to="." method="_on_save_export_pressed"]
[connection signal="pressed" from="SavePanel/M/V/HSave/Import" to="." method="_on_save_import_pressed"]
[connection signal="pressed" from="SavePanel/M/V/HExport/Export" to="." method="_on_file_export_pressed"]
[connection signal="pressed" from="SavePanel/M/V/HExport/Import" to="." method="_on_file_import_pressed"]
[connection signal="file_selected" from="SaveDialogue" to="." method="_on_save_dialogue_file_selected"]
[connection signal="file_selected" from="LoadDialogue" to="." method="_on_load_dialogue_file_selected"]
